--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-BOT_TOKEN=NjMzOTIyODI3MjIwODExNzc2.XacBkg.bQNa4nOLWLA8FMaNs9r4QPz8zik
+BOT_TOKEN=NjMzOTIyODI3MjIwODExNzc2.Xacapg.YlPp8VUlkX-mi3DTVimQvjKoMWQ
 GUILD_ID=603068841836150785
 CHANNEL_ID=603068841836150787
