--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-BOT_TOKEN=NjMzOTIyODI3MjIwODExNzc2.Xacapg.YlPp8VUlkX-mi3DTVimQvjKoMWQ
+BOT_TOKEN=NjMzOTIyODI3MjIwODExNzc2.Xagqvg.ZeaQ3KtYjk9UBL0azHZY0Z_zWCc
 GUILD_ID=603068841836150785
 CHANNEL_ID=603068841836150787
+PREFIX=!
