--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ BOT_TOKEN=NjM0NjE5Nzk4ODgxNDM1NjY5.XalJ1A.HDrpVmp5ZV1YSFiKg20cqGUf_cg
 GUILD_ID=603068841836150785
 CHANNEL_ID=603068841836150787
 PREFIX=!
+MONGODB_URI=mongodb://heroku_wmh62vg1:oa6ab4v6f6cf7tj65hga56ng0g@ds335668.mlab.com:35668/heroku_wmh62vg1
